Fixed logo font size on mobile

--- a/_sass/cds-navbar.scss
+++ b/_sass/cds-navbar.scss
@@ -325,7 +325,7 @@
 		height:3.5rem
 	}
 	.cds-logo-text a h1{
-		font-size:1.1rem;
+		font-size:2.6rem;
 		margin-top:.75rem;
 		margin-bottom:.75rem
 	}
